# Neo

./: .rosinstall.bak  README.md  mpo_500.gv
neo_simulation/: CMakeLists.txt  package.xml
neo_simulation/config/controller/: arm_controller_ur5.yaml  mpo_500_wheel_controller.yaml
neo_simulation/config/controller/launch/: controller_utils.launch
neo_simulation/config/mpo_500/amcl/: mpo_500_amcl.launch
neo_simulation/config/mpo_500/move_base/costmaps/: costmap_global.yaml  costmap_local.yaml
neo_simulation/config/mpo_500/rviz/: display.rviz  navigation_config.rviz
neo_simulation/launch/mpo_500/: display_robot_model.launch  filter.launch  moveit_neo.launch  mpo_500_autonomous_navigation.launch  mpo_500_move_base.launch  mpo_500_simulation_basic.launch  mpo_500_world.launch  slam_gmapping.launch
neo_simulation/maps/: test_map.pgm  test_map.yaml
neo_simulation/pcl/: find3d.launch
neo_simulation/pcl/demo/: demo6d.launch  grab.cpp  neo_grab.py  neopass.launch  passfilter.launch  single_grab.py  voxel.launch
neo_simulation/pcl/r_config/: neo.rviz  pcl.rviz
neo_simulation/pcl/urdf/: camera.urdf
neo_simulation/robots/mpo_500/: mpo_500.urdf  mpo_500.urdf.xacro
neo_simulation/robots/mpo_500/meshes/MPO_500/: kinect.stl
neo_simulation/robots/mpo_500/urdf/mpo_500_xacros/: cabinet.xacro  camera.xacro  mpo_500_body.xacro  mpo_500_gazebo.xacro  omni_wheel.xacro  shoulder.xacro  sick_S300.xacro  sick_laser.xacro  torso.xacro
neo_simulation/scripts/: convert.py  gripper.py  init_pose.py  move.py  move_neo.py  neo_smach.py
neo_simulation/worlds/: object.world
(+56 files in other folders)
